--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,5 +2,6 @@
 <resources>
     <dimen name="padding_default">16dp</dimen>
     <dimen name="margin_default">16dp</dimen>
+    <dimen name="margin_top_small">8dp</dimen>
     <dimen name="margin_top_large">64dp</dimen>
 </resources>
