--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--    xmlns:tools="http://schemas.android.com/tools"-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="match_parent"-->
-<!--    tools:context=".main.MainActivity">-->
-
-
-<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -22,16 +13,16 @@
         android:singleLine="true"
         android:textColor="#CEEC98"
         android:padding="10dp"
-        android:background="#46A89B"
+        android:background="@color/grey"
         android:textStyle="bold" />
     <LinearLayout
         android:id="@+id/ll_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="36dp"
-        android:background="#46A89B"
+        android:paddingStart="@dimen/margin_padding"
+        android:paddingEnd="@dimen/margin_padding"
+        android:background="@color/grey"
         android:orientation="vertical">
     </LinearLayout>
 </RelativeLayout>
-
-<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
